--- a/PersonalShop/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/PersonalShop/app/src/main/res/layout/fragment_recyclerview.xml
@@ -7,6 +7,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/primary_light"
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
