--- a/PersonalShop/app/src/main/res/values/styles.xml
+++ b/PersonalShop/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
         <item name="actionBarStyle">@style/Widget.AppTheme.ActionBar</item>
         <item name="actionBarTheme">@style/ThemeOverlay.AppTheme.ActionBar</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.AppTheme.ActionBar</item>
@@ -12,17 +12,16 @@
         <item name="android:textColorPrimary">@color/primary_text</item>
     </style>
 
-    <style name="Widget.AppTheme.ActionBar" parent="Widget.AppCompat.ActionBar.Solid">
+    <style name="Widget.AppTheme.ActionBar" parent="Theme.MaterialComponents">
         <item name="background">@color/primary</item>
         <item name="elevation">4dp</item>
     </style>
 
-    <style name="ThemeOverlay.AppTheme.ActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="ThemeOverlay.AppTheme.ActionBar" parent="Theme.MaterialComponents">
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
         <item name="actionMenuTextColor">@color/primary_text</item>
         <item name="colorControlNormal">@color/accent</item>
     </style>
-
 
 </resources>
