--- a/PersonalShop/app/src/main/res/layout/product_card_layout.xml
+++ b/PersonalShop/app/src/main/res/layout/product_card_layout.xml
@@ -2,9 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_product"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
+    android:clickable="true"
     app:cardCornerRadius="9dp"
     app:cardElevation="0dp">
 
