--- a/PersonalShop/app/src/main/res/layout/activity_detail.xml
+++ b/PersonalShop/app/src/main/res/layout/activity_detail.xml
@@ -28,13 +28,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/iv_detail"
+            <com.example.personalshop.utils.GenericCardRecycler
+                android:id="@+id/imageRecycler"
+                android:background="@android:color/white"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:minHeight="200dp"
-                android:scaleType="centerCrop" />
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/tv_detail_title"
@@ -47,14 +45,16 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_detail"
+                app:layout_constraintTop_toBottomOf="@id/imageRecycler"
                 tools:text="Titulo de producto" />
 
             <RatingBar
                 android:id="@+id/rb_detail"
+                style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:max="5"
                 android:numStars="5"
                 android:rating="4"
@@ -79,7 +79,9 @@
                 android:id="@+id/tv_product_description_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp" />
+                android:layout_margin="8dp"
+                android:text="prueba"
+                android:textColor="@color/primary_text" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_comprar"
