--- a/PersonalShop/app/src/main/res/layout/producto_image_layout.xml
+++ b/PersonalShop/app/src/main/res/layout/producto_image_layout.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@android:color/white"
-    android:layout_height="match_parent">
+    android:id="@+id/ll_image_placeholder"
+    android:layout_height="wrap_content">
 
-
-    <androidx.recyclerview.widget.RecyclerView
+    <ImageView
+        android:id="@+id/iv_placeholder"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:minHeight="200dp"
-        android:id="@+id/recyclerview"
-        />
+        android:maxHeight="300dp"/>
 
 </LinearLayout>
