--- a/PersonalShop/app/src/main/res/values/styles.xml
+++ b/PersonalShop/app/src/main/res/values/styles.xml
@@ -18,6 +18,10 @@
         <item name="elevation">4dp</item>
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
     <style name="ThemeOverlay.AppTheme.ActionBar" parent="Theme.MaterialComponents">
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
