style: color theme
feat: add onbackpress

--- a/PersonalShop/app/src/main/res/layout-v23/product_card_layout.xml
+++ b/PersonalShop/app/src/main/res/layout-v23/product_card_layout.xml
@@ -9,11 +9,11 @@
     app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cv_product"
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
+        android:id="@+id/cv_product"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_gravity="top"
         android:focusable="true">
 
