--- a/PersonalShop/app/src/main/res/layout/custom_recycler_card.xml
+++ b/PersonalShop/app/src/main/res/layout/custom_recycler_card.xml
@@ -1,28 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:baselineAligned="false"
     android:gravity="center"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <ProgressBar
         android:id="@+id/loading_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
         android:layout_gravity="center"
-        android:visibility="gone"
-        />
+        android:indeterminate="true"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:visibility="visible"
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:minHeight="200dp"
         android:layout_gravity="top"
-        android:id="@+id/recyclerview"
-        />
+        android:minHeight="200dp"
+        android:visibility="visible" />
 
 </LinearLayout>
