--- a/PersonalShop/app/src/main/res/layout/custom_toolbar.xml
+++ b/PersonalShop/app/src/main/res/layout/custom_toolbar.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
+        app:titleTextColor="@color/secondary_text"
+        app:subtitleTextColor="@color/secondary_text"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_toolbar_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/secondary_text"
             android:layout_marginEnd="?android:attr/actionBarSize"
             android:text="Detalle"
-            android:textStyle="bold"
             android:gravity="center"
             />
 
