--- a/PersonalShop/app/src/main/res/layout/producto_image_layout.xml
+++ b/PersonalShop/app/src/main/res/layout/producto_image_layout.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@android:color/white"
     android:id="@+id/ll_image_placeholder"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_placeholder"
-        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxHeight="300dp"/>
+        android:layout_height="300dp"/>
 
 </LinearLayout>
