--- a/PersonalShop/app/src/main/res/values/styles.xml
+++ b/PersonalShop/app/src/main/res/values/styles.xml
@@ -1,15 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="actionBarStyle">@style/Widget.AppTheme.ActionBar</item>
         <item name="actionBarTheme">@style/ThemeOverlay.AppTheme.ActionBar</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.AppTheme.ActionBar</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="actionMenuTextColor">@color/primary_text</item>
-        <item name="android:textColorPrimary">@color/primary_text</item>
     </style>
 
     <style name="Widget.AppTheme.ActionBar" parent="Theme.MaterialComponents">
