--- a/PersonalShop/app/src/main/res/layout/custom_recycler_card.xml
+++ b/PersonalShop/app/src/main/res/layout/custom_recycler_card.xml
@@ -17,9 +17,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="top"
-        android:minHeight="200dp"
         android:visibility="visible" />
 
 </LinearLayout>
