--- a/PersonalShop/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/PersonalShop/app/src/main/res/layout/fragment_recyclerview.xml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.personalshop.utils.GenericCardRecycler
+    android:background="@color/primary_light"
+    android:id="@+id/productRecycler"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <com.example.personalshop.utils.GenericCardRecycler
-        android:background="@color/primary_light"
-        android:id="@+id/productRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="200dp"
-        android:clipToPadding="false"
-        android:padding="5dp" />
-
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+    android:layout_height="match_parent"
+    android:padding="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
