--- a/PersonalShop/app/src/main/res/layout/activity_main.xml
+++ b/PersonalShop/app/src/main/res/layout/activity_main.xml
@@ -35,11 +35,27 @@
         android:textColor="@color/secondary_text"
         android:textSize="17sp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/frame_layout"
+        app:layout_constraintBottom_toTopOf="@+id/tv_product"
         app:layout_constraintEnd_toEndOf="@+id/app_bar"
         app:layout_constraintStart_toStartOf="@+id/app_bar"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
         tools:text="Buscar en vehículos" />
+
+    <TextView
+        android:id="@+id/tv_product"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:textColor="@color/primary_text"
+        android:background="@android:color/white"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/frame_layout"
+        app:layout_constraintEnd_toEndOf="@+id/app_bar"
+        app:layout_constraintStart_toStartOf="@+id/app_bar"
+        app:layout_constraintTop_toBottomOf="@+id/tv_category"
+        tools:text="Resultados para vehículos" />
 
     <FrameLayout
         android:id="@+id/frame_layout"
@@ -49,6 +65,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_category" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_product" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
