--- a/PersonalShop/app/src/main/res/layout-v23/product_card_layout.xml
+++ b/PersonalShop/app/src/main/res/layout-v23/product_card_layout.xml
@@ -34,12 +34,13 @@
             android:id="@+id/tv_product_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginTop="28dp"
             android:gravity="start"
-            android:textColor="@color/primary_text"
-            android:textSize="14sp"
+            android:textColor="@color/secondary_text"
+            android:textSize="12sp"
+            android:fontFamily="@font/roboto_regular"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_product"
@@ -49,12 +50,13 @@
             android:id="@+id/tv_product_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginBottom="16dp"
             android:gravity="start"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/secondary_text"
+            android:fontFamily="@font/roboto_bold"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
