style: add loaders for images

--- a/PersonalShop/app/src/main/res/layout/activity_main.xml
+++ b/PersonalShop/app/src/main/res/layout/activity_main.xml
@@ -46,11 +46,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:textColor="@color/primary_text"
+        android:paddingStart="15dp"
+        android:paddingLeft="15dp"
+        android:textColor="@color/secondary_text"
         android:background="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:visibility="gone"
+        android:fontFamily="@font/roboto_regular"
+        android:textSize="12sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/frame_layout"
         app:layout_constraintEnd_toEndOf="@+id/app_bar"
         app:layout_constraintStart_toStartOf="@+id/app_bar"
@@ -61,6 +63,8 @@
         android:id="@+id/frame_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
