--- a/PersonalShop/app/src/main/res/layout/product_card_layout.xml
+++ b/PersonalShop/app/src/main/res/layout/product_card_layout.xml
@@ -30,6 +30,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/iv_product" />
+
+
+
         <TextView
             android:id="@+id/tv_product_title"
             android:layout_width="0dp"
