--- a/PersonalShop/app/src/main/res/layout-v23/product_card_layout.xml
+++ b/PersonalShop/app/src/main/res/layout-v23/product_card_layout.xml
@@ -21,6 +21,7 @@
             android:id="@+id/iv_product"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:minHeight="150dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:alpha="1"
@@ -29,6 +30,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/iv_product" />
 
         <TextView
             android:id="@+id/tv_product_title"
