--- a/PersonalShop/app/src/main/res/layout/activity_detail.xml
+++ b/PersonalShop/app/src/main/res/layout/activity_detail.xml
@@ -18,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@android:color/white"
             android:orientation="vertical">
 
             <include
@@ -27,76 +28,93 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_product_title"
+                android:fontFamily="@font/roboto_regular"
+                android:textSize="18sp"
+                android:layout_margin="15dp"
+                android:textAlignment="textStart"
+                tools:text="Titulo"
+                />
+
             <com.example.personalshop.utils.GenericCardRecycler
                 android:id="@+id/imageRecycler"
+                android:elevation="0dp"
+                app:cardElevation="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:id="@+id/tv_detail_title"
+                android:id="@+id/tv_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:textColor="@color/primary_text"
-                android:textSize="16sp"
+                android:textColor="@color/secondary_text"
+                android:fontFamily="@font/roboto_regular"
+                android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/imageRecycler"
-                tools:text="Titulo de producto" />
+                tools:text="$ 100.000,00" />
 
             <RatingBar
                 android:id="@+id/rb_detail"
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="8dp"
                 android:max="5"
                 android:numStars="5"
                 android:saveEnabled="false"
                 android:stepSize="0.5"
-                app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
+                app:layout_constraintEnd_toEndOf="@+id/tv_price"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />
+                app:layout_constraintStart_toStartOf="@+id/tv_price"
+                app:layout_constraintTop_toBottomOf="@+id/tv_price" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_comprar"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="15dp"
+                android:text="Comprar" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:id="@+id/bt_carrito"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="32dp"
+                android:text="Agregar al carrito" />
 
             <TextView
                 android:id="@+id/tv_product_description_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="15dp"
                 android:text="Descripción"
-                android:textColor="@color/primary_text"
-                android:textSize="18sp" />
+                android:fontFamily="@font/roboto_bold"
+                android:textColor="@color/secondary_text"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_product_description_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="15dp"
+                android:fontFamily="@font/roboto_regular"
+                android:textSize="12sp"
                 android:text="prueba"
-                android:textColor="@color/primary_text" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_comprar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="8dp"
-                android:text="Comprar" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_carrito"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="32dp"
-                android:text="Agregar al carrito" />
+                android:textColor="@color/secondary_text" />
 
         </LinearLayout>
 
