--- a/PersonalShop/app/src/main/res/layout/custom_recycler_card.xml
+++ b/PersonalShop/app/src/main/res/layout/custom_recycler_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -18,7 +18,6 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="top"
-        android:visibility="visible" />
+        android:layout_gravity="top" />
 
 </LinearLayout>
