--- a/PersonalShop/app/src/main/res/layout/fragment_detail.xml
+++ b/PersonalShop/app/src/main/res/layout/fragment_detail.xml
@@ -9,6 +9,7 @@
     tools:context=".detail.DetailActivity">
 
     <include
+        android:id="@+id/include"
         layout="@layout/custom_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +22,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
