--- a/PersonalShop/app/src/main/res/layout/producto_image_layout.xml
+++ b/PersonalShop/app/src/main/res/layout/producto_image_layout.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:id="@+id/ll_image_placeholder"
+    android:layout_margin="15dp"
+    app:cardCornerRadius="5dp"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_placeholder"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:scaleType="fitCenter"
+        android:layout_height="250dp"/>
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/pb_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:visibility="visible"
+        android:layout_gravity="center"
+        />
+
+</androidx.cardview.widget.CardView>
